# infoexchanger

./: CMakeLists.txt  main.cpp
buffermanager/: CMakeLists.txt
buffermanager/include/buffermanager/: buffermanager.h
buffermanager/test/: buffermanager_test.cpp
common/msg/: CMakeLists.txt
common/msg/include/msg/: msg.h
common/msg/src/: msg.cpp
common/msg/test/: msg_test.cpp
common/msgqueue/: CMakeLists.txt
common/msgqueue/include/msgqueue/: msgqueue.h
common/msgqueue/test/: msgqueue_test.cpp
common/mylist/: CMakeLists.txt
common/processing/: CMakeLists.txt
common/processing/include/processing/: processing.h
common/processing/test/: processing_test.cpp
datareceiver/: CMakeLists.txt
datareceiver/include/datareceiver/: datareceiver.h
datareceiver/test/: datareceiver_test.cpp
datasource/: CMakeLists.txt
datasource/include/datasource/: datasource.h
datasource/test/: datasource_test.cpp
memorysupplier/imemorysupplier/: CMakeLists.txt
memorysupplier/imemorysupplier/include/imemorysupplier/: imemorysupplier.h
memorysupplier/imemorysupplier/test/: imemorysupplier_test.cpp
memorysupplier/memmapmemorysupplier/: CMakeLists.txt
memorysupplier/memmapmemorysupplier/include/memmapmemorysupplier/: memmapmemorysupplier.h
memorysupplier/sharedmemmemorysupplier/: CMakeLists.txt
memorysupplier/sharedmemmemorysupplier/include/sharedmemmemorysupplier/: sharedmemmemorysupplier.h
memorysupplier/sharedmemmemorysupplier/test/: sharedmemmemorysupplier_test.cpp
